--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/lng.github.io/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/lng.github.io/logo192.png"/><link rel="manifest" href="/lng.github.io/manifest.json"/><title>React App</title><script defer="defer" src="/lng.github.io/static/js/main.ddc11ded.js"></script><link href="/lng.github.io/static/css/main.e6c13ad2.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/Landing_Page/favicon.ico" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="/Landing_Page/logo192.png" />
+    <link rel="manifest" href="/Landing_Page/manifest.json" />
+    <title>React App</title>
+    <script
+      defer="defer"
+      src="/Landing_Page/static/js/main.ddc11ded.js"
+    ></script>
+    <link href="/Landing_Page/static/css/main.e6c13ad2.css" rel="stylesheet" />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
